Addition of my pictures

--- a/index.html
+++ b/index.html
@@ -38,18 +38,25 @@
 			    <img src="img/4.png" alt="Movie Poster" height="400" width="400">
 			  </figure>
 
+			  <figure class="item">
+			    <img src="img/5.png" alt="Ad" height="400" width="400">
+			  </figure>
+
 			  <div class="controls">
 			    <a href="#item-1" class="control-button">
-			    	<img src="img/1-thumb.jpg" alt="">
+			    	<img src="img/1-thumb.png" alt="Directional Poster" height="100" width="100">
 			    </a>
 			    <a href="#item-2" class="control-button">
-			    	<img src="img/2-thumb.jpg" alt="">
+			    	<img src="img/2-thumb.png" alt="Business Card" height="100" width="100">
 			    </a>
 			    <a href="#item-3" class="control-button">
-					<img src="img/3-thumb.jpg" alt="">
+					<img src="img/3-thumb.png" alt="Symposium Poster"height="100" width="100">
 			    </a>
 			    <a href="#item-4" class="control-button">
-					<img src="img/4-thumb.jpg" alt="">
+					<img src="img/4-thumb.png" alt="Movie Poster" height="100" width="100">
+			    </a>
+			    <a href="#item-5" class="control-button">
+					<img src="img/5-thumb.png" alt="Ad" height="100" width="100">
 			    </a>
 			  </div>
 			</div>
