Addition of style

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Your Website</title>
+  <title>Portfolio</title>
 	
  <link rel="icon" href="favicon.ico">	
  
@@ -16,14 +16,37 @@
 	<div class="container">
 		
 		<!-- Your Content -->
+
+		<div class="grid_12 nav_top alpha omega">
+		<ul>
+			<li class="grid_8 alpha"></li>
+			<li class="grid_1"><a href="index" alt="Home">Home</a></li>
+			<li class="grid_1"><a href="resume" alt="Jordan's resume">Resume</a></li>
+			<li class="grid_1"><a href="jordan.l.neels@gmail.com" alt="Jordan's email">Contact</a></li>
+			<li class="grid_1 omega"></li>
+		</ul>
+	</div>
+
+	<div class="grid_12 banner alpha omega">
+	<header>
+		<div class="grid_12 alpha omega">
+		<div class="grid_12 alpha">
+			<h1>Jordan Neels</h1>
+		<div class="subtitle">Editor. Designer. Technical Writer.</p>
+		</div>
+	</header>
+</div>
+
 		<div class="gallery items-4">
 			  <div id="item-1" class="control-operator"></div>
 			  <div id="item-2" class="control-operator"></div>
 			  <div id="item-3" class="control-operator"></div>
 			  <div id="item-4" class="control-operator"></div>
+  			  <div id="item-5" class="control-operator"></div>
+
 
 			  <figure class="item">
-			    <img src="img/1.png" alt="Directional Poster" height="400" width="450">
+			    <img src="img/1.png" alt="Directional Poster" height="400" width="1000">
 			  </figure>
 
 			  <figure class="item">
@@ -41,6 +64,15 @@
 			  <figure class="item">
 			    <img src="img/5.png" alt="Ad" height="400" width="400">
 			  </figure>
+
+			   <figure class="item">
+			    <img src="img/5.png" alt="Ad" height="400" width="400">
+			  </figure>
+
+			   <figure class="item">
+			    <img src="img/5.png" alt="Ad" height="400" width="400">
+			  </figure>
+
 
 			  <div class="controls">
 			    <a href="#item-1" class="control-button">
@@ -60,6 +92,10 @@
 			    </a>
 			  </div>
 			</div>
+
+				<div class="grid_12 footer">
+			<p>&copy; 2014 Jordan Neels</p>
+		</div>
 
 		<!-- Clearfix -->
 		<div class="clear"></div>
