--- a/index.html
+++ b/index.html
@@ -6,7 +6,11 @@
 	
  <link rel="icon" href="favicon.ico">	
  
-  <link rel="stylesheet" href="css/normalize.css">				
+  <link rel="stylesheet" href="css/normalize.css">	
+
+  <link href='http://fonts.googleapis.com/css?family=Cinzel+Decorative:400,700' rel='stylesheet' type='text/css'>
+
+<link href='http://fonts.googleapis.com/css?family=Droid+Serif' rel='stylesheet' type='text/css'>			
   <link rel="stylesheet" href="css/gallery.css">	 
   <link rel="stylesheet" href="css/styles.css">	
 	
@@ -17,26 +21,20 @@
 		
 		<!-- Your Content -->
 
-		<div class="grid_12 nav_top alpha omega">
-		<ul>
-			<li class="grid_8 alpha"></li>
-			<li class="grid_1"><a href="index" alt="Home">Home</a></li>
-			<li class="grid_1"><a href="resume" alt="Jordan's resume">Resume</a></li>
-			<li class="grid_1"><a href="jordan.l.neels@gmail.com" alt="Jordan's email">Contact</a></li>
-			<li class="grid_1 omega"></li>
-		</ul>
-	</div>
-
-	<div class="grid_12 banner alpha omega">
-	<header>
-		<div class="grid_12 alpha omega">
-		<div class="grid_12 alpha">
-			<h1>Jordan Neels</h1>
+	<header class="grid_12 banner alpha omega">
+		<h1 class="grid_8 alpha">Jordan Neels</h1>
 		<div class="subtitle">Editor. Designer. Technical Writer.</p>
 		</div>
+		<ul>
+			<li class="grid_1"><a href="index" alt="Home">Home</a></li>
+			<li class="grid_1"><a href="resume" alt="Jordan's resume">Resume</a></li>
+			<li class="grid_1 "><a href="portfolio" alt="Jordan's Style Tile">Style Tile</a></li>
+			<li class="grid_1 omega"><a href="portfolio" alt="Jordan's portfolio">Portfolio</a></li>
+		</ul>
 	</header>
 </div>
 
+<section>
 		<div class="gallery items-4">
 			  <div id="item-1" class="control-operator"></div>
 			  <div id="item-2" class="control-operator"></div>
@@ -46,33 +44,24 @@
 
 
 			  <figure class="item">
-			    <img src="img/1.png" alt="Directional Poster" height="400" width="1000">
+			    <img src="img/1.png" alt="Directional Poster" height="450" width="1000">
 			  </figure>
 
 			  <figure class="item">
-			    <img src="img/2.png" alt="Business card" height="400" width="400">
+			    <img src="img/2.png" alt="Business card" height="400" width="1000">
 			  </figure>
 
 			  <figure class="item">
-			    <img src="img/3.png" alt="Symposium Poster" height="400" width="400">
+			    <img src="img/3.png" alt="Symposium Poster" height="400" width="1000">
 			  </figure>
 
 			  <figure class="item">
-			    <img src="img/4.png" alt="Movie Poster" height="400" width="400">
+			    <img src="img/4.png" alt="Movie Poster" height="400" width="1000">
 			  </figure>
 
 			  <figure class="item">
-			    <img src="img/5.png" alt="Ad" height="400" width="400">
+			    <img src="img/5.png" alt="Ad" height="1000" width="400">
 			  </figure>
-
-			   <figure class="item">
-			    <img src="img/5.png" alt="Ad" height="400" width="400">
-			  </figure>
-
-			   <figure class="item">
-			    <img src="img/5.png" alt="Ad" height="400" width="400">
-			  </figure>
-
 
 			  <div class="controls">
 			    <a href="#item-1" class="control-button">
@@ -92,10 +81,11 @@
 			    </a>
 			  </div>
 			</div>
+</section>
 
-				<div class="grid_12 footer">
+		<footer class="grid_12">
 			<p>&copy; 2014 Jordan Neels</p>
-		</div>
+		</footer>
 
 		<!-- Clearfix -->
 		<div class="clear"></div>
