container background color

--- a/index.html
+++ b/index.html
@@ -10,38 +10,33 @@
 
   <link href='http://fonts.googleapis.com/css?family=Cinzel+Decorative:400,700' rel='stylesheet' type='text/css'>
 
-<link href='http://fonts.googleapis.com/css?family=Droid+Serif' rel='stylesheet' type='text/css'>			
+  <link href='http://fonts.googleapis.com/css?family=Droid+Serif' rel='stylesheet' type='text/css'>			
   <link rel="stylesheet" href="css/gallery.css">	 
   <link rel="stylesheet" href="css/styles.css">	
 	
 </head>
 <body>
-	
-	<div class="container">
-		
+
 		<!-- Your Content -->
-
-	<header class="grid_12 banner alpha omega">
-		<h1 class="grid_8 alpha">Jordan Neels</h1>
-		<div class="subtitle">Editor. Designer. Technical Writer.</p>
+	<div class="container">
+	
+		<div class="grid_12 banner alpha omega">
+			<h1 class="grid_8 alpha">Jordan Neels</h1>
+			<div class="subtitle">Editor. Designer. Technical Writer.</div>
+				<ul>
+					<li class="grid_1"><a href="index" alt="Home">Home</a></li>
+					<li class="grid_1"><a href="resume" alt="Jordan's resume">Resume</a></li>
+					<li class="grid_1 "><a href="portfolio" alt="Jordan's Style Tile">Style Tile</a></li>
+					<li class="grid_1 omega"><a href="portfolio" alt="Jordan's portfolio">Portfolio</a></li>
+				</ul>			
 		</div>
-		<ul>
-			<li class="grid_1"><a href="index" alt="Home">Home</a></li>
-			<li class="grid_1"><a href="resume" alt="Jordan's resume">Resume</a></li>
-			<li class="grid_1 "><a href="portfolio" alt="Jordan's Style Tile">Style Tile</a></li>
-			<li class="grid_1 omega"><a href="portfolio" alt="Jordan's portfolio">Portfolio</a></li>
-		</ul>
-	</header>
-</div>
 
-<section>
 		<div class="gallery items-4">
 			  <div id="item-1" class="control-operator"></div>
 			  <div id="item-2" class="control-operator"></div>
 			  <div id="item-3" class="control-operator"></div>
 			  <div id="item-4" class="control-operator"></div>
   			  <div id="item-5" class="control-operator"></div>
-
 
 			  <figure class="item">
 			    <img src="img/1.png" alt="Directional Poster" height="450" width="1000">
@@ -79,18 +74,19 @@
 			    <a href="#item-5" class="control-button">
 					<img src="img/5-thumb.png" alt="Ad" height="100" width="100">
 			    </a>
-			  </div>
 			</div>
-</section>
+		</div>
 
-		<footer class="grid_12">
+		<div class="grid_12 footer alpha omega">
 			<p>&copy; 2014 Jordan Neels</p>
-		</footer>
+		
+	</div>
 
+	
 		<!-- Clearfix -->
 		<div class="clear"></div>
 
-	</div>
+	
 	
   
 </body>
