Took out body color

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 		<!-- Your Content -->
 	<div class="container">
 	
+	<section>
 		<div class="grid_12 banner alpha omega">
 			<h1 class="grid_8 alpha">Jordan Neels</h1>
 			<div class="subtitle">Editor. Designer. Technical Writer.</div>
@@ -30,6 +31,9 @@
 					<li class="grid_1 omega"><a href="portfolio" alt="Jordan's portfolio">Portfolio</a></li>
 				</ul>			
 		</div>
+	</section>
+
+	<section>
 
 		<div class="gallery items-4">
 			  <div id="item-1" class="control-operator"></div>
@@ -74,20 +78,17 @@
 			    <a href="#item-5" class="control-button">
 					<img src="img/5-thumb.png" alt="Ad" height="100" width="100">
 			    </a>
+			  </div>
 			</div>
-		</div>
+	</section>
 
+	<footer>
 		<div class="grid_12 footer alpha omega">
 			<p>&copy; 2014 Jordan Neels</p>
-		
-	</div>
+		</div>
 
-	
-		<!-- Clearfix -->
-		<div class="clear"></div>
-
-	
-	
+	</footer>
+</div>
   
 </body>
 </html>
