--- a/index.html
+++ b/index.html
@@ -19,22 +19,27 @@
 
 		<!-- Your Content -->
 	<div class="container">
+
+	<section>
+		<div class="grid_12 nav_top alpha omega">
+		<ul>
+			<li class="grid_8 alpha"></li>
+			<li class="grid_1"><a href="index" alt="Home">Home</a></li>
+			<li class="grid_1"><a href="resume" alt="Jordan's resume">Resume</a></li>
+			<li class="grid_1"><a href="jordan.l.neels@gmail.com" alt="Jordan's email">Contact</a></li>
+			<li class="grid_1 omega"></li>
+		</ul>
+		</div>
+	</selection>
 	
 	<section>
 		<div class="grid_12 banner alpha omega">
 			<h1 class="grid_8 alpha">Jordan Neels</h1>
 			<div class="subtitle">Editor. Designer. Technical Writer.</div>
-				<ul>
-					<li class="grid_1"><a href="index" alt="Home">Home</a></li>
-					<li class="grid_1"><a href="resume" alt="Jordan's resume">Resume</a></li>
-					<li class="grid_1 "><a href="portfolio" alt="Jordan's Style Tile">Style Tile</a></li>
-					<li class="grid_1 omega"><a href="portfolio" alt="Jordan's portfolio">Portfolio</a></li>
-				</ul>			
 		</div>
 	</section>
 
 	<section>
-
 		<div class="gallery items-4">
 			  <div id="item-1" class="control-operator"></div>
 			  <div id="item-2" class="control-operator"></div>
