--- a/index.html
+++ b/index.html
@@ -19,16 +19,17 @@
 
 		<!-- Your Content -->
 	<div class="container">
-
+	<img src="img/mylogo.png" height="200" weight="200">
 	<section>
 		<div class="grid_12 nav_top alpha omega">
-		<ul>
-			<li class="grid_8 alpha"></li>
-			<li class="grid_1"><a href="index" alt="Home">Home</a></li>
-			<li class="grid_1"><a href="resume" alt="Jordan's resume">Resume</a></li>
-			<li class="grid_1"><a href="jordan.l.neels@gmail.com" alt="Jordan's email">Contact</a></li>
-			<li class="grid_1 omega"></li>
-		</ul>
+		
+			<ul>
+				<li class="grid_8 alpha"></li>
+				<li class="grid_1"><a href="index" alt="Home">Home</a></li>
+				<li class="grid_1"><a href="resume" alt="Jordan's resume">Resume</a></li>
+				<li class="grid_1"><a href="jordan.l.neels@gmail.com" alt="Jordan's email">Contact</a></li>
+				<li class="grid_1 omega"></li>
+			</ul>
 		</div>
 	</selection>
 	
