--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 		<!-- Your Content -->
 	<div class="container">
 
-	<img src="img/mylogo.png" height="200" weight="200">
+	<img src="img/mylogo.png" height="200" width="200">
 
 	<section>
 		<div class="gallery items-4">
@@ -58,7 +58,7 @@
 			    	<img src="img/2-thumb.png" alt="Business Card" height="100" width="100">
 			    </a>
 			    <a href="#item-3" class="control-button">
-					<img src="img/3-thumb.png" alt="Symposium Poster"height="100" width="100">
+					<img src="img/3-thumb.png" alt="Symposium Poster" height="100" width="100">
 			    </a>
 			    <a href="#item-4" class="control-button">
 					<img src="img/4-thumb.png" alt="Movie Poster" height="100" width="100">
@@ -68,14 +68,16 @@
 			    </a>
 			  </div>
 			</div>
+
 	</section>
+
+</div>
 
 	<footer>
 		<div class="grid_12 footer alpha omega">
 			<p>&copy; 2014 Jordan Neels</p>
 		</div>
 	</footer>
-</div>
   
 </body>
 </html>
