footer and 5th image fixed

--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
 		<!-- Your Content -->
 	<div class="container">
 
-	<img src="img/mylogo.png" height="200" width="200">
+	<div><img src="img/mylogo.png" height="200" width="200"></div>
 
 	<section>
-		<div class="gallery items-4">
+		<div class="gallery items-5">
 			  <div id="item-1" class="control-operator"></div>
 			  <div id="item-2" class="control-operator"></div>
 			  <div id="item-3" class="control-operator"></div>
@@ -35,19 +35,19 @@
 			  </figure>
 
 			  <figure class="item">
-			    <img src="img/2.png" alt="Business card" height="400" width="1000">
+			    <img src="img/2.png" alt="Business card" height="450" width="1000">
 			  </figure>
 
 			  <figure class="item">
-			    <img src="img/3.png" alt="Symposium Poster" height="400" width="1000">
+			    <img src="img/3.png" alt="Symposium Poster" height="450" width="1000">
 			  </figure>
 
 			  <figure class="item">
-			    <img src="img/4.png" alt="Movie Poster" height="400" width="1000">
+			    <img src="img/4.png" alt="Movie Poster" height="450" width="1000">
 			  </figure>
 
 			  <figure class="item">
-			    <img src="img/5.png" alt="Ad" height="1000" width="400">
+			    <img src="img/5.png" alt="Ad" height="450" width="1000">
 			  </figure>
 
 			  <div class="controls">
