--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 		<!-- Your Content -->
 	<div class="container">
 
-	<div><img src="img/mylogo.png" height="200" width="200"></div>
+	<div class="logo"><img src="img/mylogo.png" height="200" width="200"></div>
 
 	<section>
 		<div class="gallery items-5">
