--- a/index.html
+++ b/index.html
@@ -8,9 +8,6 @@
  
   <link rel="stylesheet" href="css/normalize.css">	
 
-  <link href='http://fonts.googleapis.com/css?family=Cinzel+Decorative:400,700' rel='stylesheet' type='text/css'>
-
-  <link href='http://fonts.googleapis.com/css?family=Droid+Serif' rel='stylesheet' type='text/css'>			
   <link rel="stylesheet" href="css/gallery.css">	 
   <link rel="stylesheet" href="css/styles.css">	
 	
@@ -23,31 +20,46 @@
 	<div class="logo"><img src="img/mylogo.png" height="200" width="200"></div>
 
 	<section>
-		<div class="gallery items-5">
+		<div class="gallery items-8">
 			  <div id="item-1" class="control-operator"></div>
 			  <div id="item-2" class="control-operator"></div>
 			  <div id="item-3" class="control-operator"></div>
 			  <div id="item-4" class="control-operator"></div>
   			  <div id="item-5" class="control-operator"></div>
+  			  <div id="item-6" class="control-operator"></div>
+  			  <div id="item-7" class="control-operator"></div>
+  			  <div id="item-8" class="control-operator"></div>
 
 			  <figure class="item">
 			    <img src="img/1.png" alt="Directional Poster" height="450" width="1000">
 			  </figure>
 
 			  <figure class="item">
-			    <img src="img/2.png" alt="Business card" height="450" width="1000">
+			    <img src="img/2.png" alt="Business card" height="400" width="900">
 			  </figure>
 
 			  <figure class="item">
-			    <img src="img/3.png" alt="Symposium Poster" height="450" width="1000">
+			    <img src="img/3.png" alt="Symposium Poster" height="400" width="900">
 			  </figure>
 
 			  <figure class="item">
-			    <img src="img/4.png" alt="Movie Poster" height="450" width="1000">
+			    <img src="img/4.png" alt="Movie Poster" height="400" width="900">
 			  </figure>
 
 			  <figure class="item">
-			    <img src="img/5.png" alt="Ad" height="450" width="1000">
+			    <img src="img/5.png" alt="Ad" height="400" width="800">
+			  </figure>
+
+			   <figure class="item">
+			    <img src="img/6.png" alt="Website" height="400" width="800">
+			  </figure>
+
+			   <figure class="item">
+			    <img src="img/7.png" alt="Fact Sheet" height="400" width="800">
+			  </figure>
+
+			  <figure class="item">
+			    <img src="img/8.png" alt="Media Release" height="400" width="800">
 			  </figure>
 
 			  <div class="controls">
@@ -66,6 +78,16 @@
 			    <a href="#item-5" class="control-button">
 					<img src="img/5-thumb.png" alt="Ad" height="100" width="100">
 			    </a>
+			    <a href="#item-6" class="control-button">
+					<img src="img/6-thumb.png" alt="Website" height="100" width="100">
+			    </a>
+			    <a href="#item-7" class="control-button">
+					<img src="img/7-thumb.png" alt="Fact Sheet" height="100" width="100">
+			    </a>
+			    <a href="#item-8" class="control-button">
+					<img src="img/8-thumb.png" alt="Fact Sheet" height="100" width="100">
+			    </a>
+
 			  </div>
 			</div>
 
