Added writing pieces

--- a/index.html
+++ b/index.html
@@ -29,9 +29,10 @@
   			  <div id="item-6" class="control-operator"></div>
   			  <div id="item-7" class="control-operator"></div>
   			  <div id="item-8" class="control-operator"></div>
+  			  <div id="item-9" class="control-operator"></div>
 
 			  <figure class="item">
-			    <img src="img/1.png" alt="Directional Poster" height="450" width="1000">
+			    <img src="img/1.png" alt="Directional Poster" height="400" width="1000">
 			  </figure>
 
 			  <figure class="item">
@@ -62,6 +63,10 @@
 			    <img src="img/8.png" alt="Media Release" height="400" width="800">
 			  </figure>
 
+			   <figure class="item">
+			    <img src="img/9.png" alt="Media Release" height="400" width="800">
+			  </figure>
+
 			  <div class="controls">
 			    <a href="#item-1" class="control-button">
 			    	<img src="img/1-thumb.png" alt="Directional Poster" height="100" width="100">
@@ -86,6 +91,9 @@
 			    </a>
 			    <a href="#item-8" class="control-button">
 					<img src="img/8-thumb.png" alt="Fact Sheet" height="100" width="100">
+			    </a>
+			    <a href="#item-9" class="control-button">
+					<img src="img/9-thumb.png" alt="Fact Sheet" height="100" width="100">
 			    </a>
 
 			  </div>
