--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 	<div class="logo"><img src="img/mylogo.png" height="200" width="200"></div>
 
 	<section>
-		<div class="gallery items-8">
+		<div class="gallery items-9">
 			  <div id="item-1" class="control-operator"></div>
 			  <div id="item-2" class="control-operator"></div>
 			  <div id="item-3" class="control-operator"></div>
@@ -30,72 +30,72 @@
   			  <div id="item-7" class="control-operator"></div>
   			  <div id="item-8" class="control-operator"></div>
   			  <div id="item-9" class="control-operator"></div>
-
+  			  
 			  <figure class="item">
 			    <img src="img/1.png" alt="Directional Poster" height="400" width="1000">
 			  </figure>
 
 			  <figure class="item">
-			    <img src="img/2.png" alt="Business card" height="400" width="900">
+			    <img src="img/2.png" alt="Symposium Poster" height="400" width="900">
 			  </figure>
 
 			  <figure class="item">
-			    <img src="img/3.png" alt="Symposium Poster" height="400" width="900">
+			    <img src="img/3.png" alt="Movie Poster" height="400" width="900">
 			  </figure>
 
 			  <figure class="item">
-			    <img src="img/4.png" alt="Movie Poster" height="400" width="900">
+			    <img src="img/4.png" alt="Ad" height="400" width="900">
 			  </figure>
 
 			  <figure class="item">
-			    <img src="img/5.png" alt="Ad" height="400" width="800">
+			    <img src="img/5.png" alt="Website" height="400" width="800">
 			  </figure>
 
 			   <figure class="item">
-			    <img src="img/6.png" alt="Website" height="400" width="800">
+			    <img src="img/6.png" alt="Fact Sheet" height="400" width="800">
 			  </figure>
 
 			   <figure class="item">
-			    <img src="img/7.png" alt="Fact Sheet" height="400" width="800">
+			    <img src="img/7.png" alt="Media Release" height="400" width="800">
 			  </figure>
 
 			  <figure class="item">
-			    <img src="img/8.png" alt="Media Release" height="400" width="800">
+			    <img src="img/8.png" alt="Newsletter" height="400" width="800">
 			  </figure>
 
-			   <figure class="item">
-			    <img src="img/9.png" alt="Media Release" height="400" width="800">
+			  <figure class="item">
+			    <img src="img/9.png" alt="Proposal" height="400" width="800">
 			  </figure>
 
-			  <div class="controls">
+			   <div class="controls">
 			    <a href="#item-1" class="control-button">
 			    	<img src="img/1-thumb.png" alt="Directional Poster" height="100" width="100">
 			    </a>
 			    <a href="#item-2" class="control-button">
-			    	<img src="img/2-thumb.png" alt="Business Card" height="100" width="100">
+			    	<img src="img/2-thumb.png" alt="Symposium Poster" height="100" width="100">
 			    </a>
 			    <a href="#item-3" class="control-button">
-					<img src="img/3-thumb.png" alt="Symposium Poster" height="100" width="100">
+					<img src="img/3-thumb.png" alt="Movie Poster" height="100" width="100">
 			    </a>
 			    <a href="#item-4" class="control-button">
-					<img src="img/4-thumb.png" alt="Movie Poster" height="100" width="100">
+					<img src="img/4-thumb.png" alt="Ad" height="100" width="100">
 			    </a>
 			    <a href="#item-5" class="control-button">
-					<img src="img/5-thumb.png" alt="Ad" height="100" width="100">
+					<img src="img/5-thumb.png" alt="Website" height="100" width="100">
 			    </a>
 			    <a href="#item-6" class="control-button">
-					<img src="img/6-thumb.png" alt="Website" height="100" width="100">
+					<img src="img/6-thumb.png" alt="" height="100" width="100">
 			    </a>
 			    <a href="#item-7" class="control-button">
 					<img src="img/7-thumb.png" alt="Fact Sheet" height="100" width="100">
 			    </a>
 			    <a href="#item-8" class="control-button">
-					<img src="img/8-thumb.png" alt="Fact Sheet" height="100" width="100">
+					<img src="img/8-thumb.png" alt="Media Release" height="100" width="100">
 			    </a>
 			    <a href="#item-9" class="control-button">
-					<img src="img/9-thumb.png" alt="Fact Sheet" height="100" width="100">
+					<img src="img/9-thumb.png" alt="Proposal" height="100" width="100">
 			    </a>
-
+			 
 			  </div>
 			</div>
 
