--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <title>Portfolio</title>
 	
- <link rel="icon" href="favicon.ico">	
+ <link rel="icon" href="favicon.icon">	
  
   <link rel="stylesheet" href="css/normalize.css">	
 
@@ -32,39 +32,39 @@
   			  <div id="item-9" class="control-operator"></div>
   			  
 			  <figure class="item">
-			    <img src="img/1.png" alt="Directional Poster" height="400" width="1000">
+			    <img src="img/1.png" alt="Directional Poster" height="450" width="900">
 			  </figure>
 
 			  <figure class="item">
-			    <img src="img/2.png" alt="Symposium Poster" height="400" width="900">
+			    <img src="img/2.png" alt="Symposium Poster" height="450" width="900">
 			  </figure>
 
 			  <figure class="item">
-			    <img src="img/3.png" alt="Movie Poster" height="400" width="900">
+			    <img src="img/3.png" alt="Movie Poster" height="450" width="900">
 			  </figure>
 
 			  <figure class="item">
-			    <img src="img/4.png" alt="Ad" height="400" width="900">
+			    <img src="img/4.png" alt="Ad" height="450" width="900">
 			  </figure>
 
 			  <figure class="item">
-			    <img src="img/5.png" alt="Website" height="400" width="800">
+			    <img src="img/5.png" alt="Website" height="450" width="900">
 			  </figure>
 
 			   <figure class="item">
-			    <img src="img/6.png" alt="Fact Sheet" height="400" width="800">
+			    <img src="img/6.png" alt="Fact Sheet" height="450" width="900">
 			  </figure>
 
 			   <figure class="item">
-			    <img src="img/7.png" alt="Media Release" height="400" width="800">
+			    <img src="img/7.png" alt="Media Release" height="450" width="900">
 			  </figure>
 
 			  <figure class="item">
-			    <img src="img/8.png" alt="Newsletter" height="400" width="800">
+			    <img src="img/8.png" alt="Newsletter" height="450" width="900">
 			  </figure>
 
 			  <figure class="item">
-			    <img src="img/9.png" alt="Proposal" height="400" width="800">
+			    <img src="img/9.png" alt="Proposal" height="450" width="900">
 			  </figure>
 
 			   <div class="controls">
@@ -84,13 +84,13 @@
 					<img src="img/5-thumb.png" alt="Website" height="100" width="100">
 			    </a>
 			    <a href="#item-6" class="control-button">
-					<img src="img/6-thumb.png" alt="" height="100" width="100">
+					<img src="img/6-thumb.png" alt="Fact Sheet" height="100" width="100">
 			    </a>
 			    <a href="#item-7" class="control-button">
-					<img src="img/7-thumb.png" alt="Fact Sheet" height="100" width="100">
+					<img src="img/7-thumb.png" alt="Media Release" height="100" width="100">
 			    </a>
 			    <a href="#item-8" class="control-button">
-					<img src="img/8-thumb.png" alt="Media Release" height="100" width="100">
+					<img src="img/8-thumb.png" alt="Newsletter" height="100" width="100">
 			    </a>
 			    <a href="#item-9" class="control-button">
 					<img src="img/9-thumb.png" alt="Proposal" height="100" width="100">
