--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <title>Portfolio</title>
 	
- <link rel="icon" href="favicon 2.icon">	
+ <link rel="icon" href="favicon 2.ico">	
  
   <link rel="stylesheet" href="css/normalize.css">	
 
