--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <title>Portfolio</title>
 	
- <link rel="icon" href="favicon new.ico">	
+ <link rel="icon" href="favicon new.icon">	
  
   <link rel="stylesheet" href="css/normalize.css">	
 
@@ -29,7 +29,7 @@
   			  <div id="item-5" class="control-operator"></div>
   		  			  
 			  <figure class="item">
-			    <img src="img/1.png" alt="Directional Poster" height="450" width="900">
+			    <img src="img/1.png" alt="Directional Poster" height="450" width="700">
 			  </figure>
 
 			  <figure class="item">
