--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <title>Portfolio</title>
 	
- <link rel="icon" href="favicon new.icon">	
+ <link rel="icon" href="favicon new.ico">	
  
   <link rel="stylesheet" href="css/normalize.css">	
 
@@ -19,7 +19,7 @@
 
 	<section>
 
-	<div class="logo"><img src="img/mylogo.png" height="200" width="200"></div>
+	<div class="logo"><img src="img/mylogo.png" height="200" width="300"></div>
 
 		<div class="gallery items-5">
 			  <div id="item-1" class="control-operator"></div>
