--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
  
   <link rel="stylesheet" href="css/normalize.css">	
 
-  <link rel="stylesheet" href="css/gallery.css">	 
+  <link rel="stylesheet" href="css/gallery.css">
+
+  <link href="http://fonts.googleapis.com/css?family=Droid+Serif" rel="stylesheet" type="text/css">	 
   <link rel="stylesheet" href="css/styles.css">	
 	
 </head>
@@ -71,6 +73,12 @@
 			</div>
 
 </div>
+
+<h3>References</h3>
+<ul>
+	<li><a href="https://github.com/vcd/p4-portfolio">Gallery Sample</a></li>
+	<li><a href="http://mhoblin.github.io/p4-portfolio/">Monica Hoblin's Portfolio</a></li>
+</ul>
 
 	<footer>
 		<div class="grid_12 footer alpha omega">
