--- a/index.html
+++ b/index.html
@@ -19,6 +19,17 @@
 		<!-- Your Content -->
 	<div class="container">
 
+		<div class="grid_12 alpha omega">
+			<ul>
+				<li class="grid_1 alpha"></li>
+				<li class="grid_2"><a href="jordanneels.github.io" alt="Home">Home</a></li>
+				<li class="grid_2"><a href="http://jordanneels.github.io/p1-bio/" alt="Jordan's Bio">Bio</a></li>
+				<li class="grid_2"><a href="http://jordanneels.github.io/p2-resume/" alt="Jordan's resume">Resume</a></li>
+				<li class="grid_2"><a href="http://jordanneels.github.io/p3-style-tile" alt="Style Tile">Style Tile</a></li>
+				<li class="grid_2 omega"><a href="http://jordanneels.github.io/p4-portfolio" alt="Jordan's portfolio">Portfolio</a></li>
+			</ul>
+		</div>
+
 	<section>
 
 	<div class="logo"><img src="img/mylogo.png" height="200" width="300"></div>
